--- a/src/app/ventas/pages/registro/registro.component.html
+++ b/src/app/ventas/pages/registro/registro.component.html
@@ -25,7 +25,7 @@
                                 <div class="tabs-menu">
                                     <ul ngbNav #nav="ngbNav" [activeId]="1" class="panel-tabs nav">
                                         <li class="me-2 mb-1" [ngbNavItem]="1">
-                                            <a ngbNavLink><i class="bi bi-star-fill"></i> Leads</a>
+                                            <a ngbNavLink><i class="bi bi-star-fill"></i> Leads - Base Extra</a>
                                             <ng-template ngbNavContent>
                                                 <div class="tab-pane">
                                                     <br>
@@ -48,7 +48,7 @@
                                                     <path d="M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0m-9 8c0 1 1 1 1 1h5.256A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1 1.544-3.393Q8.844 9.002 8 9c-5 0-6 3-6 4"/>
                                                     <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0m-3.5-2a.5.5 0 0 0-.5.5v1.5a.5.5 0 0 0 1 0V11a.5.5 0 0 0-.5-.5m0 4a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1"/>
                                                 </svg> 
-                                                Matrículas</a>
+                                                Solo Matrículas</a>
                                             <ng-template ngbNavContent>
                                                 <div class="tab-pane">
                                                     <br>
