--- a/src/app/ventas/pages/registro/matriculas/matriculas.component.html
+++ b/src/app/ventas/pages/registro/matriculas/matriculas.component.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="table-responsive invoice-table" id="table">
-            <table class="table table-bordered" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+            <table class="table" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                 <thead>
-                <tr>
+                <tr class="text-muted">
                     <th class="text-center"><small>Nº</small></th>
                     <th><small>Nombres y Apellidos</small></th>
                     <th class="text-center"><small>DNI</small></th>
