--- a/src/app/ventas/pages/panel/panel.component.html
+++ b/src/app/ventas/pages/panel/panel.component.html
@@ -1,1 +1,345 @@
-<p>panel works!</p>
+<!-- page title bar -->
+<div class="container-fluid">
+    <div class="row align-items-center page-title">
+        <div class="col-12 col-md mb-2 mb-sm-0">
+            <h5 class="mb-0">Dashboard Ventas</h5>
+            <p class="text-secondary">Versión Beta <i class="bi bi-git"></i></p>
+        </div>
+        <div class="col col-sm-auto">
+        </div>
+        <div class="col-auto ps-0 position-relative">
+        </div>
+    </div>
+</div>
+<div class="container mt-4">
+    <div class="row" *ngIf="cantidades">
+        <div class="col-12 col-md-12 col-lg-6 col-xl-3 column-set mb-4">
+            <div class="card border-0">
+                <div class="card-body">
+                    <div class="row align-items-center">
+                        <div class="col-auto">
+                            <div class="avatar avatar-40 rounded bg-blue shadow-sm text-white">
+                                <i class="bi bi-person-workspace h5"></i>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <p class="small text-secondary mb-1">Leads Repartidos</p>
+                            <h6 class="fw-medium mb-0">{{cantidades.cantidad_leads}}</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-12 col-lg-6 col-xl-3 column-set mb-4">
+            <div class="card border-0">
+                <div class="card-body">
+                    <div class="row align-items-center">
+                        <div class="col-auto">
+                            <div class="avatar avatar-40 rounded bg-green shadow-sm text-white">
+                                <i class="bi bi-folder2-open h5"></i>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <p class="small text-secondary mb-1">Fichas</p>
+                            <h6 class="fw-medium mb-0">{{cantidades.cantidad_fichas}}</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-12 col-lg-6 col-xl-3 column-set mb-4">
+            <div class="card border-0">
+                <div class="card-body">
+                    <div class="row align-items-center">
+                        <div class="col-auto">
+                            <div class="avatar avatar-40 rounded bg-purple shadow-sm text-white">
+                                <i class="bi bi-people h5"></i>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <p class="small text-secondary mb-1">Solo Matrícula</p>
+                            <h6 class="fw-medium mb-0">{{cantidades.cantidad_solo_matricula}}</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-12 col-lg-6 col-xl-3 column-set mb-4">
+            <div class="card border-0">
+                <div class="card-body">
+                    <div class="row align-items-center">
+                        <div class="col-auto">
+                            <div class="avatar avatar-40 rounded bg-yellow shadow-sm text-white">
+                                <i class="bi bi-journal-check h5"></i>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <p class="small text-secondary mb-1">Ventas Completas del Mes</p>
+                            <h6 class="fw-medium mb-0">{{cantidades.cantidad_ventas}}</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- tasks and schedules -->
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6 mb-4">
+            <div class="card border-0 mb-4">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-auto">
+                            <i class="bi bi-clock h5 avatar avatar-40 bg-light-theme rounded"></i>
+                        </div>
+                        <div class="col-auto align-self-center">
+                            <h6 class="fw-medium mb-0">Timesheet Submitted</h6>
+                            <p class="text-secondary small">Logged time by user</p>
+                        </div>
+                        <div class="col-auto ms-auto">
+                            <div class="input-group border">
+                                <span class="input-group-text text-theme"><i class="bi bi-search"></i></span>
+                                <input type="text" class="form-control" placeholder="Buscar...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body p-0">
+                    <table class="table table-borderless footable" data-show-toggle="true">
+                        <thead>
+                            <tr class="text-muted">
+                                <th class="">Project</th>
+                                <th data-breakpoints="xs md">Date/Time</th>
+                                <th class="w-auto">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <div class="row align-items-center">
+                                        <div class="col-auto">
+                                            <figure class="avatar avatar-50 border mb-0 coverimg rounded">
+                                                <img src="assets/img/news-4.jpg" alt="" class="w-100" />
+                                            </figure>
+                                        </div>
+                                        <div class="col ps-0">
+                                            <p class="mb-0">Divine soul apps</p>
+                                            <p class="text-secondary small mb-1">Requirement Understanding</p>
+                                            <p class="text-secondary small">By <a>Avnit Preet</a></p>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td>
+                                    <p class="mb-0">20-1-2022</p>
+                                    <p class="text-secondary small">9:00 am</p>
+                                </td>
+                                <td>
+                                    <div class="dropdown d-inline-block">
+                                        <a class="text-secondary dd-arrow-none" data-bs-toggle="dropdown" aria-expanded="false" data-bs-display="static" role="button">
+                                            <i class="bi bi-three-dots"></i>
+                                        </a>
+                                        <ul class="dropdown-menu dropdown-menu-end">
+                                            <li><a class="dropdown-item" href="javascript:void(0)">Edit</a></li>
+                                            <li><a class="dropdown-item" href="javascript:void(0)">Move</a></li>
+                                            <li><a class="dropdown-item text-danger" href="javascript:void(0)">Delete</a></li>
+                                        </ul>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="row align-items-center mx-0 mb-3">
+                        <div class="col-6 ">
+                            <span class="hide-if-no-paging">
+                                Showing <span id="footablestot">1st</span> page
+                            </span>
+                        </div>
+                        <div class="col-6" id="footable-pagination"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6 mb-4">
+            <div class="card border-0 mb-4">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-auto">
+                            <i class="bi bi-clock h5 avatar avatar-40 bg-light-theme rounded"></i>
+                        </div>
+                        <div class="col-auto align-self-center">
+                            <h6 class="fw-medium mb-0">Timesheet Submitted</h6>
+                            <p class="text-secondary small">Logged time by user</p>
+                        </div>
+                        <div class="col-auto ms-auto">
+                            <div class="input-group border">
+                                <span class="input-group-text text-theme"><i class="bi bi-search"></i></span>
+                                <input type="text" class="form-control" placeholder="Buscar...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body p-0">
+                    <table class="table table-borderless footable" data-show-toggle="true">
+                        <thead>
+                            <tr class="text-muted">
+                                <th class="">Project</th>
+                                <th data-breakpoints="xs md">Date/Time</th>
+                                <th class="w-auto">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <div class="row align-items-center">
+                                        <div class="col-auto">
+                                            <figure class="avatar avatar-50 border mb-0 coverimg rounded">
+                                                <img src="assets/img/news-4.jpg" alt="" class="w-100" />
+                                            </figure>
+                                        </div>
+                                        <div class="col ps-0">
+                                            <p class="mb-0">Divine soul apps</p>
+                                            <p class="text-secondary small mb-1">Requirement Understanding</p>
+                                            <p class="text-secondary small">By <a>Avnit Preet</a></p>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td>
+                                    <p class="mb-0">20-1-2022</p>
+                                    <p class="text-secondary small">9:00 am</p>
+                                </td>
+                                <td>
+                                    <div class="dropdown d-inline-block">
+                                        <a class="text-secondary dd-arrow-none" data-bs-toggle="dropdown" aria-expanded="false" data-bs-display="static" role="button">
+                                            <i class="bi bi-three-dots"></i>
+                                        </a>
+                                        <ul class="dropdown-menu dropdown-menu-end">
+                                            <li><a class="dropdown-item" href="javascript:void(0)">Edit</a></li>
+                                            <li><a class="dropdown-item" href="javascript:void(0)">Move</a></li>
+                                            <li><a class="dropdown-item text-danger" href="javascript:void(0)">Delete</a></li>
+                                        </ul>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="row align-items-center mx-0 mb-3">
+                        <div class="col-6 ">
+                            <span class="hide-if-no-paging">
+                                Showing <span id="footablestot">1st</span> page
+                            </span>
+                        </div>
+                        <div class="col-6" id="footable-pagination"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12 col-md-12 position-relative">
+            <div class="card border-0 mb-4">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-auto">
+                            <i class="bi bi-info-circle h5 avatar avatar-40 bg-light-theme rounded"></i>
+                        </div>
+                        <div class="col-auto align-self-center">
+                            <h6 class="fw-medium mb-0">Informe Diplomados</h6>
+                            <p class="text-secondary small">Listar de diplomados para ver información</p>
+                        </div>
+                        <div class="col-auto ms-auto">
+                            <div class="input-group border">
+                                <span class="input-group-text text-theme"><i class="bi bi-search"></i></span>
+                                <input type="text" class="form-control" placeholder="Buscar...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body p-0">
+                    <div class="table-responsive invoice-table" id="table">
+                        <table class="table" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                            <thead>
+                                <tr class="text-muted">
+                                    <th class="">Diplomado</th>
+                                    <th class="text-center">Estudiantes Matrículados</th>
+                                    <th class="text-center">Vacantes Disponibles</th>
+                                    <th>Última Fecha Venta</th>
+                                    <th>Fecha Inicio Clases</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let valinforme of informe_diplomados, index as id">
+                                    <td>
+                                        <div class="row">
+                                            <div class="col-auto">
+                                                <i class="bi bi-book avatar avatar-40 bg-light-blue text-blue rounded"></i>
+                                            </div>
+                                            <div class="col ps-0">
+                                                <p class="mb-1 text-trucate w-100">{{valinforme.diplomado}}</p>
+                                                <p class="text-secondary small">{{valinforme.diplomado_code}}</p>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td class="text-center">
+                                        {{valinforme.estudiantes_matriculados}}
+                                    </td>
+                                    <td class="text-center">
+                                        {{valinforme.vacantes_disponibles}}
+                                    </td>
+                                    <td>
+                                        <a href="javascript:void(0);" data-bs-toggle="tooltip" data-bs-placement="right" title="Actualizar Fecha"
+                                            class="" *ngIf="user=='SANDRA MARIA'" (click)="actFecha(valinforme.diplomado_code)">
+                                            <p class="mb-0">{{(+valinforme.ultima_fecha_venta)*1000 | date:'dd/MM/yyyy'}}</p>
+                                            <p class="text-secondary small">{{(+valinforme.ultima_fecha_venta)*1000 | date:'h:mm a'}}</p>
+                                        </a>
+                                        <div *ngIf="user!='SANDRA MARIA'">
+                                            <p class="mb-0">{{(+valinforme.ultima_fecha_venta)*1000 | date:'dd/MM/yyyy'}}</p>
+                                            <p class="text-secondary small">{{(+valinforme.ultima_fecha_venta)*1000 | date:'h:mm a'}}</p>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <p class="mb-0">{{valinforme.fecha_inicio_clases*1000 | date:'dd/MM/yyyy'}}</p>
+                                        <p class="text-secondary small">{{valinforme.fecha_inicio_clases*1000 | date:'h:mm a'}}</p>
+                                    </td>
+                                    <!-- <td>
+                                        <div class="dropdown d-inline-block">
+                                            <a class="text-secondary dd-arrow-none" data-bs-toggle="dropdown" aria-expanded="false" data-bs-display="static" role="button">
+                                                <i class="bi bi-three-dots"></i>
+                                            </a>
+                                            <ul class="dropdown-menu dropdown-menu-end">
+                                                <li><a class="dropdown-item" href="javascript:void(0)">Edit</a></li>
+                                                <li><a class="dropdown-item" href="javascript:void(0)">Move</a></li>
+                                                <li><a class="dropdown-item text-danger" href="javascript:void(0)">Delete</a></li>
+                                            </ul>
+                                        </div>
+                                    </td> -->
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="row">
+        <div class="col-12 col-md-12 position-relative">
+            <div class="card border-0 mb-4">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-auto">
+                            <i class="bi bi-cash-stack h5 avatar avatar-40 bg-light-orange rounded" style="color: rgb(162, 86, 10);"></i>
+                        </div>
+                        <div class="col-auto align-self-center">
+                            <h6 class="fw-medium mb-0">Alumnos Pagos Matrícula</h6>
+                            <p class="text-secondary small">Listado de alumnos que pagaron su matrícula, pero falta el pago del 1 mes</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body p-0">
+                    <app-matriculas></app-matriculas>
+                </div>
+            </div>
+        </div>
+    </div> -->
+</div>
