--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -731,8 +731,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div><a class="dropdown-item" routerLink="/alumno/panel" routerLinkActive="active">Dashboard</a></div>
-                            <div><a class="dropdown-item" routerLink="/alumno/perfil" routerLinkActive="active">Mi Perfil</a></div>
+                            <div><a class="dropdown-item" routerLink="/{{user_rol}}/panel" routerLinkActive="active">Dashboard</a></div>
+                            <div><a class="dropdown-item" routerLink="/{{user_rol}}/perfil" routerLinkActive="active">Mi Perfil</a></div>
                             <!-- <div>
                                 <a class="dropdown-item" routerLink="/pages/dashboard/home/">
                                     <div class="row g-0">
