--- a/src/app/ventas/pages/panel/panel.component.html
+++ b/src/app/ventas/pages/panel/panel.component.html
@@ -1,5 +1,5 @@
 <!-- page title bar -->
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <div class="row align-items-center page-title">
         <div class="col-12 col-md mb-2 mb-sm-0">
             <h5 class="mb-0">Dashboard Ventas</h5>
@@ -10,9 +10,9 @@
         <div class="col-auto ps-0 position-relative">
         </div>
     </div>
-</div>
+</div> -->
 <div class="container mt-4">
-    <div class="row" *ngIf="cantidades">
+    <!-- <div class="row" *ngIf="cantidades">
         <div class="col-12 col-md-12 col-lg-6 col-xl-3 column-set mb-4">
             <div class="card border-0">
                 <div class="card-body">
@@ -81,10 +81,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- tasks and schedules -->
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6 mb-4">
             <div class="card border-0 mb-4">
                 <div class="card-header">
@@ -233,9 +233,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-12 col-md-12 position-relative">
             <div class="card border-0 mb-4">
                 <div class="card-header">
@@ -301,18 +301,6 @@
                                         <p class="mb-0">{{valinforme.fecha_inicio_clases*1000 | date:'dd/MM/yyyy'}}</p>
                                         <p class="text-secondary small">{{valinforme.fecha_inicio_clases*1000 | date:'h:mm a'}}</p>
                                     </td>
-                                    <!-- <td>
-                                        <div class="dropdown d-inline-block">
-                                            <a class="text-secondary dd-arrow-none" data-bs-toggle="dropdown" aria-expanded="false" data-bs-display="static" role="button">
-                                                <i class="bi bi-three-dots"></i>
-                                            </a>
-                                            <ul class="dropdown-menu dropdown-menu-end">
-                                                <li><a class="dropdown-item" href="javascript:void(0)">Edit</a></li>
-                                                <li><a class="dropdown-item" href="javascript:void(0)">Move</a></li>
-                                                <li><a class="dropdown-item text-danger" href="javascript:void(0)">Delete</a></li>
-                                            </ul>
-                                        </div>
-                                    </td> -->
                                 </tr>
                             </tbody>
                         </table>
@@ -320,7 +308,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- <div class="row">
         <div class="col-12 col-md-12 position-relative">
