--- a/src/app/ventas/pages/registro/leads/leads.component.html
+++ b/src/app/ventas/pages/registro/leads/leads.component.html
@@ -16,6 +16,9 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12">
+            <!-- <a href="javascript:void(0);" (click)="openModalSeguimiento('data')">
+                <i class="bi bi-binoculars"></i>
+            </a> -->
             <ng-template #idTpl let-rowIndex="rowIndex" let-row="row">
                 {{rowIndex+1}}
             </ng-template>
@@ -296,19 +299,28 @@
                             <div class="form-floating">
                                 <select (change)="selectSeguimiento($event)" class="form-select border-start-0" formControlName="estado" required>
                                     <option value="" disabled selected>Seleccionar Estado</option>
-                                    <option *ngFor="let valSeg of estado_seg" value="{{valSeg.id}}">
+                                    <option *ngFor="let valSeg of estado_seg" class="text-uppercase" value="{{valSeg.id}}">
                                         {{valSeg.name}}
                                     </option>
                                 </select>
                             </div>
                         </div>
                     </div>
+                    <div class="form-group mb-2 position-relative" *ngIf="date_seguimiento">
+                        <div class="input-group input-group-lg">
+                            <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-calendar"></i></span>
+                            <div class="form-floating">
+                                <input formControlName="fecha" type="date" class="form-control border-start-0" autocomplete="off" required>
+                            </div>
+                        </div>
+                        <small class="text-muted">Ingresar Fecha</small>
+                    </div>
                     <div class="form-group position-relative">
                         <div class="input-group input-group-lg">
                             <span class="input-group-text text-theme bg-white border-end-0"><i class="bi bi-chat-right-text"></i></span>
                             <div class="form-floating">
                                 <textarea required class="form-control" placeholder="Motivo Seguimiento" id="floatingTextarea2" formControlName="reason" rows="2"></textarea>
-                                <label for="floatingTextarea2">Motivo Seguimiento</label>
+                                <label for="floatingTextarea2">Comentario</label>
                             </div>
                             <!-- <div class="form-floating">
                                 <textarea required class="form-control border-start-0 h-auto" rows="3" formControlName="reason" id="floatingInput"></textarea>
@@ -343,7 +355,7 @@
                                 <th data-breakpoints="xs sm" class="w-80">No Contesta - No Interesado - Información - Próximo Grupo</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <!-- <tbody>
                         <tr *ngFor="let valSeguimiento of data_detail.seguimiento.no_interesado, index as id">
                             <td>
                                 <div class="row">
@@ -396,7 +408,7 @@
                                 </div>
                             </td>
                         </tr>
-                        </tbody>
+                        </tbody> -->
                     </table>
                 </div>
             </div>
