--- a/src/app/ventas/pages/registro/registro.component.html
+++ b/src/app/ventas/pages/registro/registro.component.html
@@ -23,7 +23,7 @@
                         <div class="panel panel-primary">
                             <div class="tab-menu-heading">
                                 <div class="tabs-menu">
-                                    <ul ngbNav #nav="ngbNav" [activeId]="1" class="panel-tabs nav">
+                                    <ul ngbNav #nav="ngbNav" [activeId]="1" class="panel-tabs nav" style="justify-content: center;">
                                         <li class="me-2 mb-1" [ngbNavItem]="1">
                                             <a ngbNavLink><i class="bi bi-star-fill"></i> Leads - Base Extra</a>
                                             <ng-template ngbNavContent>
